[package]
name = "p25rx"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]
license = "GPLv2"

[dependencies]

clap = "^2.12.1"
collect_slice = "^1.2.0"
crossbeam = "0.2.0"
demod_fm = {version = "^0.1.0", git = "https://github.com/kchmck/demod_fm.rs"}
fnv = "^1.0.5"
imbe = {version = "^1.0.0", git = "https://github.com/kchmck/imbe.rs"}
libc = "^0.2.8"
map_in_place = {version = "^1.0.0", git = "https://github.com/kchmck/map_in_place.rs"}
num = "^0.1.34"
p25 = {version = "^1.0.0", git = "https://github.com/kchmck/p25.rs", features = ["ser"]}
p25_filts = {version = "^1.0.0", git = "https://github.com/kchmck/p25_filts.rs"}
pool = {version = "^0.1.3", git = "https://github.com/kchmck/pool"}
prctl = "^1.0.0"
rand = "^0.3.13"
rtlsdr = {version = "2.0.0", git = "https://github.com/kchmck/rtlsdr.rs"}
rtlsdr_iq = {version = "^1.0.0", git = "https://github.com/kchmck/rtlsdr_iq.rs"}
static_decimate = {version = "^1.0.0", git = "https://github.com/kchmck/static_decimate.rs"}
static_fir = {version = "^1.0.0", git = "https://github.com/kchmck/static_fir.rs"}
throttle = {version = "^1.0.0", git = "https://github.com/kchmck/throttle.rs"}

chan = "0.1.0"
chrono = "0.2.25"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
uhttp_chunked_write = "0.5.0"
uhttp_json_api = "0.5.0"
uhttp_method = "0.10.0"
uhttp_response_header = "0.5.0"
uhttp_sse = "0.5.0"
uhttp_status = "0.10.0"
uhttp_uri = "0.5.1"
uhttp_version = "0.6.0"

[profile.release]
panic = "abort"
